--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import WaitlistForm from "../components/WaitlistForm";
+
+export const prerender = true;
 ---
 
 <Layout>
