--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@
     <meta name="generator" content={Astro.generator} />
     <title>Talent Manager</title>
   </head>
-  <body>
+  <body class="bg-slate-900">
     <slot />
   </body>
 </html>
@@ -26,8 +26,6 @@
   }
   html {
     font-family: system-ui, sans-serif;
-    background: #13151a;
-    background-size: 224px;
   }
   code {
     font-family:
