Basics of text copy

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
@@ -8,7 +8,7 @@
     <meta name="generator" content={Astro.generator} />
     <title>Talent Manager</title>
   </head>
-  <body class="bg-slate-900">
+  <body class="dark:bg-slate-900">
     <slot />
   </body>
 </html>
