Work on desktop view

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>Talent Manager</title>
+    <title>Repbot</title>
   </head>
-  <body class="dark:bg-slate-900">
+  <body class="dark:bg-slate-900 dark:text-white">
+    <nav class="h-[60px] border-b border-slate-400 flex items-center container">
+      Repbot
+    </nav>
     <slot />
   </body>
 </html>
