--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Paragraph from "../components/landing/Paragraph.astro";
 import WaitlistForm from "../components/WaitlistForm";
 import "../styles/global.css";
 
@@ -18,7 +19,7 @@ export const prerender = true;
             Repbot does 80% of what a talent manager does - without taking a 20%
             commission on your brand deals.
           </p>
-          <p class="text-3xl text-slate-200">
+          <p class="text-3xl mb-4 text-slate-200">
             We qualify your inbound leads, negotiate better rates, and help you
             spend more time on the creative part of being a creator.
             <u>All for free</u>.
@@ -38,27 +39,29 @@ export const prerender = true;
         👋 Say Goodbye to Sh*t Affiliate Deals from Russian Mobile Game
         Spammers.
       </h2>
-      <p class="text-xl leading-8 text-slate-200">
+      <Paragraph>
         Repbot asks brands for the important deal details <i>upfront</i>. This
         enables you to filter out the noise before it ever reaches your inbox.
+      </Paragraph>
+      <Paragraph>
         No more wasting time scouring the internet trying to see if a company or
         product is legit. And if you never want to see another affiliate deal in
         your life, now you don't have to.
-      </p>
+      </Paragraph>
     </div>
     <div class="container py-6 mb-12">
       <h2 class="text-4xl font-bold mb-4">
         💪 Maximize Your Sponsorship Revenue with a Ruthless, Informed
         Negotiator.
       </h2>
-      <p class="text-xl leading-8 text-slate-200">
+      <Paragraph>
         Repbot asks brand for their budget and negotiates on your behalf if we
         think their offer is too low. We use a holistic approach to negotiation
         that takes into account your minimum rate, social metrics, and data from
         past deals across all creators using Repbot. However, brands are still
         in control of their offer at the end of the day - our goal in
         negotiation is simply to advocate for fair pay.
-      </p>
+      </Paragraph>
     </div>
     <div class="container py-6 mb-12">
       <h2 class="text-4xl font-bold mb-4">
