--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,38 +56,49 @@ export const prerender = true;
       </h2>
       <Paragraph>
         Repbot asks brand for their budget and negotiates on your behalf if we
-        think their offer is too low. We use a holistic approach to negotiation
-        that takes into account your minimum rate, social metrics, and data from
-        past deals across all creators using Repbot. However, brands are still
-        in control of their offer at the end of the day - our goal in
-        negotiation is simply to advocate for fair pay.
+        think their offer is too low.
+      </Paragraph>
+      <Paragraph>
+        We use a holistic approach to negotiation that takes into account your
+        minimum rate, social metrics, and data from past deals across all
+        creators using Repbot.
+      </Paragraph>
+      <Paragraph>
+        However, brands are still in control of their offer at the end of the
+        day - our goal in negotiation is simply to advocate for fair pay.
       </Paragraph>
     </div>
     <div class="container py-6 mb-12">
       <h2 class="text-4xl font-bold mb-4">
         👀 Compare Deals at a Glance. Accept the Best Fit. And Get Back to Work.
       </h2>
-      <p class="text-xl leading-8 text-slate-200">
+      <Paragraph>
         Repbot give you an easy way to read and review your inbound brand deals.
-        When one catches your eye, all you have to do is hit "Reply". Then, we
-        get out of the way and let you handle communication, contracting,
-        invoicing and payment with the tools you already use to run your
-        business.
-      </p>
+        When one catches your eye, all you have to do is hit "Reply".
+      </Paragraph>
+      <Paragraph>
+        Then, we get out of the way and let you handle communication,
+        contracting, invoicing and payment with the tools you already use to run
+        your business.
+      </Paragraph>
     </div>
     <div class="container py-6 mb-12">
       <h2 class="text-4xl font-bold mb-4">
         🔥 Fire Us Whenever. We're Free Forever.
       </h2>
-      <p class="text-xl leading-8 text-slate-200">
+      <Paragraph>
         Repbot exists so that you never have to sign with a manager that will
         take 15% of your business in exchange for barely managing your email
         inbox. But if better representation comes along, we want you to take it.
-        No fees. No contractural obligations or early exist clauses. We see
-        ourselves as a stepping stone to an agency that will help you with
-        outbound, hiring, and product development if that's the route you choose
-        to go with your business.
-      </p>
+      </Paragraph>
+      <Paragraph>
+        No fees. No contractural obligations. No early exist clauses.
+      </Paragraph>
+      <Paragraph>
+        We see ourselves as a stepping stone to an agency that will help you
+        with outbound, hiring, and product development if that's the route you
+        choose to go with your business.
+      </Paragraph>
     </div>
   </main>
 </Layout>
