--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ export const prerender = true;
 
 <Layout>
   <main class="text-white text-lg leading-5">
-    <div class="h-[calc(95vh-60px)] flex flex-col">
+    <div class="min-h-[calc(95vh-60px)] flex flex-col">
       <div class="flex-1 flex flex-col lg:justify-center">
         <div class="py-5 pb-0 container xl:text-center">
           <h1 class="text-7xl font-bold mb-8">
