--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ export const prerender = true;
     <div class="min-h-[calc(95vh-60px)] flex flex-col">
       <div class="flex-1 flex flex-col lg:justify-center">
         <div class="py-5 pb-0 container xl:text-center">
-          <h1 class="text-7xl font-bold mb-8">
+          <h1 class="text-6xl md:text-7xl font-bold mb-8">
             A Talent Manager for Every Creator
           </h1>
           <p class="text-3xl mb-4 text-slate-200">
