--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,6 @@ export const prerender = true;
           <p class="text-3xl mb-4 text-slate-200">
             We qualify your inbound leads, negotiate better rates, and help you
             spend more time on the creative part of being a creator.
-            <u>All for free</u>.
           </p>
         </div>
         <div class="py-10 container xl:flex xl:flex-col xl:items-center">
@@ -41,12 +40,12 @@ export const prerender = true;
       </h2>
       <Paragraph>
         Repbot asks brands for the important deal details <i>upfront</i>. This
-        enables you to filter out the noise before it ever reaches your inbox.
+        enables you to filter out the noise when viewing your inbox.
       </Paragraph>
       <Paragraph>
         No more wasting time scouring the internet trying to see if a company or
         product is legit. And if you never want to see another affiliate deal in
-        your life, now you don't have to.
+        your life, hiding them is just a click away.
       </Paragraph>
     </div>
     <div class="container py-6 mb-12">
@@ -55,13 +54,8 @@ export const prerender = true;
         Negotiator.
       </h2>
       <Paragraph>
-        Repbot asks brand for their budget and negotiates on your behalf if we
+        Repbot asks brands for their budget and negotiates on your behalf if we
         think their offer is too low.
-      </Paragraph>
-      <Paragraph>
-        We use a holistic approach to negotiation that takes into account your
-        minimum rate, social metrics, and data from past deals across all
-        creators using Repbot.
       </Paragraph>
       <Paragraph>
         However, brands are still in control of their offer at the end of the
@@ -83,21 +77,14 @@ export const prerender = true;
       </Paragraph>
     </div>
     <div class="container py-6 mb-12">
-      <h2 class="text-4xl font-bold mb-4">
-        🔥 Fire Us Whenever. We're Free Forever.
-      </h2>
+      <h2 class="text-4xl font-bold mb-4">🔥 Fire Us Whenever.</h2>
       <Paragraph>
         Repbot exists so that you never have to sign with a manager that will
         take 15% of your business in exchange for barely managing your email
         inbox. But if better representation comes along, we want you to take it.
       </Paragraph>
       <Paragraph>
-        No fees. No contractural obligations. No early exist clauses.
-      </Paragraph>
-      <Paragraph>
-        We see ourselves as a stepping stone to an agency that will help you
-        with outbound, hiring, and product development if that's the route you
-        choose to go with your business.
+        No fees. No contractural obligations. No early exit clauses.
       </Paragraph>
     </div>
   </main>
