--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,11 +15,13 @@ export const prerender = true;
           <h1 class="text-6xl md:text-7xl font-bold mb-8">
             A Talent Manager for Every Creator
           </h1>
-          <p class="text-3xl mb-4 text-slate-200">
-            Repbot does 80% of what a talent manager does - without taking a 20%
-            commission on your brand deals.
+          <p class="text-2xl md:text-3xl mb-4 text-slate-200">
+            <code>Repbot</code> does 80% of what a talent manager does - <b
+              ><i>without</i></b
+            >
+             taking a 20% commission on your brand deals.
           </p>
-          <p class="text-3xl mb-4 text-slate-200">
+          <p class="text-2xl md:text-3xl mb-4 text-slate-200">
             We qualify your inbound leads, negotiate better rates, and help you
             spend more time on the creative part of being a creator.
           </p>
@@ -39,8 +41,9 @@ export const prerender = true;
         Spammers.
       </h2>
       <Paragraph>
-        Repbot asks brands for the important deal details <i>upfront</i>. This
-        enables you to filter out the noise when viewing your inbox.
+        <code>Repbot</code> asks brands for the important deal details <i
+          >upfront</i
+        >. This enables you to filter out the noise when viewing your inbox.
       </Paragraph>
       <Paragraph>
         No more wasting time scouring the internet trying to see if a company or
@@ -54,12 +57,13 @@ export const prerender = true;
         Negotiator.
       </h2>
       <Paragraph>
-        Repbot asks brands for their budget and negotiates on your behalf if we
-        think their offer is too low.
+        <code>Repbot</code> automatically negotiates higher rates from brands on
+        your behalf. You tell us your minimum rate and social stats, and we'll
+        use previous deal data to get you the best offer possible.
       </Paragraph>
       <Paragraph>
-        However, brands are still in control of their offer at the end of the
-        day - our goal in negotiation is simply to advocate for fair pay.
+        Brands can still submit offers below industry standard and you can still
+        take them - our goal in negotiation is simply to advocate for fair pay.
       </Paragraph>
     </div>
     <div class="container py-6 mb-12">
@@ -67,8 +71,9 @@ export const prerender = true;
         👀 Compare Deals at a Glance. Accept the Best Fit. And Get Back to Work.
       </h2>
       <Paragraph>
-        Repbot give you an easy way to read and review your inbound brand deals.
-        When one catches your eye, all you have to do is hit "Reply".
+        <code>Repbot</code> give you an easy way to read and review your inbound
+        brand deals. When one catches your eye, all you have to do is hit
+        "Reply".
       </Paragraph>
       <Paragraph>
         Then, we get out of the way and let you handle communication,
@@ -79,9 +84,10 @@ export const prerender = true;
     <div class="container py-6 mb-12">
       <h2 class="text-4xl font-bold mb-4">🔥 Fire Us Whenever.</h2>
       <Paragraph>
-        Repbot exists so that you never have to sign with a manager that will
-        take 15% of your business in exchange for barely managing your email
-        inbox. But if better representation comes along, we want you to take it.
+        <code>Repbot</code> exists so that you never have to sign with a manager
+        that will take 15% of your business in exchange for barely managing your
+        email inbox. But if better representation comes along, we want you to
+        take it.
       </Paragraph>
       <Paragraph>
         No fees. No contractural obligations. No early exit clauses.
