--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,7 +68,7 @@ export const prerender = true;
     </div>
     <div class="container py-6 mb-12">
       <h2 class="text-4xl font-bold mb-4">
-        👀 Compare Deals at a Glance. Accept the Best Fit. And Get Back to Work.
+        👀 Compare Deals at a Glance, Accept the Best Fit, & Get Back to Work.
       </h2>
       <Paragraph>
         <code>Repbot</code> give you an easy way to read and review your inbound
