--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -90,7 +90,7 @@ export const prerender = true;
         take it.
       </Paragraph>
       <Paragraph>
-        No fees. No contractural obligations. No early exit clauses.
+        <b>No fees. No contractural obligations. No early exit clauses.</b>
       </Paragraph>
     </div>
   </main>
