Basics of other pages

--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -2,19 +2,19 @@
 import WaitlistForm from "../WaitlistForm";
 ---
 
-<div class="min-h-[calc(95vh-60px)] flex flex-col wrap-balance">
+<div class="min-h-[calc(95vh-70px)] flex flex-col wrap-balance">
   <div class="flex-1 flex flex-col lg:justify-center">
     <div class="py-5 pb-0 container xl:text-center">
-      <h1 class="text-6xl md:text-7xl font-bold mb-8">
-        A Talent Manager for Every Creator
+      <h1 class="text-6xl md:text-8xl font-bold mb-8">
+        The Talent Rep for Every Creator
       </h1>
-      <p class="text-2xl md:text-3xl mb-4 text-slate-200">
+      <p class="text-2xl md:text-3xl mb-4 dark:text-slate-200">
         <code>Repbot</code> does 80% of what a talent manager does - <b
           ><i>without</i></b
         >
          taking a 20% commission on your brand deals.
       </p>
-      <p class="text-2xl md:text-3xl mb-4 text-slate-200">
+      <p class="text-2xl md:text-3xl mb-4 dark:text-slate-200">
         We qualify your inbound leads, negotiate better rates, and help you
         spend more time on the creative part of being a creator.
       </p>
@@ -25,6 +25,8 @@ import WaitlistForm from "../WaitlistForm";
     </div>
   </div>
   <div class="container-small mb-5">
-    <p class="font-bold text-slate-300">We exist to help you...</p>
+    <p class="font-bold dark:text-slate-300 text-slate-700">
+      We exist to help you...
+    </p>
   </div>
 </div>
