--- a/src/components/landing/Paragraph.astro
+++ b/src/components/landing/Paragraph.astro
@@ -1,3 +1,5 @@
-<p class="text-xl leading-8 text-slate-200 [&:not(:last-child)]:mb-5">
+<p
+  class="text-xl leading-8 text-slate-800 dark:text-slate-200 [&:not(:last-child)]:mb-5"
+>
   <slot />
 </p>
