--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,15 +19,14 @@ import "../styles/global.css";
       <div class="flex-1"><a href="/" class="text-base">Repbot</a></div>
       <div class="flex items-center gap-6">
         <a href="/about">about</a>
-        <a href="/roadmap">roadmap</a>
+        <!-- <a href="/roadmap">roadmap</a> -->
+        <a href="/roadmap">code</a>
         <a href="/roadmap">discord</a>
       </div>
     </nav>
     <slot />
     <footer class="container text-center min-h-[40px] font-mono text-sm">
-      Made with ❤️ by <a href="/about" class="underline"
-        >some digital radicals</a
-      >.
+      Made with ❤️ by some internet radicals.
     </footer>
   </body>
 </html>
